--- a/html/experience.html
+++ b/html/experience.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Experience</title>
-    <link rel="stylesheet" href="../css/inspiration.css">
+    <link rel="stylesheet" href="../css/experience.css">
     <link rel="icon" href="../fotot/experience-icon.jpg">
     <script src="../js/experience.js" defer></script>
     <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
@@ -64,33 +64,33 @@
   </header>
 
   <!--Section-->
-  <section id="rb-experience">
+  <section class="rb-section-experience">
     <p class="rb-heading-p">My work experience</p>
     <a href="https://www.merriam-webster.com/dictionary/experience" class="rb-link-experience"><h1 class="rb-heading">Experience</h1></a>
     <hr>
-      <div class="container rb-experience-container">
-        <div class="rb-experience-box">
-          <div class="rb-experience">
-            <div class="rb-experience-div">
-              <div class="rb-checkbox">
-                <input class="rb-form-check-input" type="checkbox" id="checkboxNoLabel11" value="" aria-label="">
-              </div>
-              <div>
-                <h4>Interior Designer<br>Fogarty Finger<br>2014-current</h4>
-                <p> 
-                  <ul>
-                    <li>Communicated with contractors, homeowners, builders, and other clients regarding 75+ major and minor projects a year, increasing the company's profits by 2% year over year.</li>
-                    <li>Managed and tracked client orders, supervised installations, assured quality, and addressed client's complaints.</li>
-                    <li>Provided proposals and estimates for projects, and scheduled consulations with prospects, securing 34% of them as clients.</li>
-                  </ul>
-                </p>
-              </div>
+    <div class="container rb-experience-container">
+      <div class="rb-experience-box">
+        <div class="rb-experience">
+          <div class="rb-experience-div">
+            <div class="rb-checkbox">
+             <input class="rb-form-check-input" type="checkbox" id="checkboxNoLabel11" value="" aria-label="">
             </div>
-            <hr>
-            <div class="rb-experience-div">
-              <div class="rb-checkbox">
-                <input class="rb-form-check-input" type="checkbox" id="checkboxNoLabel12" value="2" aria-label="">
-              </div>
+            <div>
+              <h4>Interior Designer<br>Fogarty Finger<br>2014-current</h4>
+              <p> 
+                <ul>
+                  <li>Communicated with contractors, homeowners, builders, and other clients regarding 75+ major and minor projects a year, increasing the company's profits by 2% year over year.</li>
+                  <li>Managed and tracked client orders, supervised installations, assured quality, and addressed client's complaints.</li>
+                  <li>Provided proposals and estimates for projects, and scheduled consulations with prospects, securing 34% of them as clients.</li>
+                </ul>
+              </p>
+            </div>
+          </div>
+          <hr> 
+          <div class="rb-experience-div">
+            <div class="rb-checkbox">
+              <input class="rb-form-check-input" type="checkbox" id="checkboxNoLabel12" value="2" aria-label="">
+            </div>
             <div>
               <h4>Interior Designer<br>The Designers Group<br>2009-2014</h4>
               <p>
@@ -111,79 +111,78 @@
             <div>
               <h4>Interior Designer Intern<br>Interior Talent<br>2008-2009</h4>
               <p>
-              <ul>
-                <li>Demonstrated ability to design projects on AutoCAD, improving customer experience and feedback.</li>
-                <li>Created inovices for clients, reviewed their requests, and discussed best design practices to crate quality projects. </li>
-             </ul>
-            </p>
+                <ul>
+                  <li>Demonstrated ability to design projects on AutoCAD, improving customer experience and feedback.</li>
+                  <li>Created inovices for clients, reviewed their requests, and discussed best design practices to crate quality projects. </li>
+                </ul>
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
   </section>
 
-    <!--Footer-->
-    <footer>
-        <footer class="bg-dark text-white pt-5 pb-4">
-          <div class="container text-center text-md-center">
-              <div class="row text-center text-md-left">
-                  <div class="col-md-4 col-xs-12">
-                      <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
-                       <p class="text-transform-uppercase">
-                          <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
-                       </p>
-                       <p>
-                          <a href="https://www.interaction-design.org/literature/topics/interaction-design"class="text-decoration-none text-white">Interactions</a>
-                       </p>
-                       <p>
-                          <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
-                       </p>
-                       <p>
-                          <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
-                       </p>
-                   </div>
-                   <div class="col-md-4 col-xs-12">
-                      <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
-                      <p>
-                          <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
-                       </p>
-                       <p>
-                          <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
-                       </p>
-                       <p>
-                          <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
-                        </p>
-                   </div>
-                  <div class="col-md-4 col-xs-12">
-                       <h5 class="text-uppercase">Social</h5>
-                       <p>
-                          <a href="https://www.facebook.com/" class="text-decoration-none text-white">
-                          <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
-                       </p>
-                       <p>
-                          <a href="https://www.instagram.com/" class="text-decoration-none text-white">
-                          <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
-                       </p>
-                       <p>
-                          <a href="https://www.gmail.com/" class="text-white text-decoration-none">
-                          <i class="fa fa-envelope text-primary"></i> Mail</a>
-                       </p>
-                   </div>
-               </div>
+  <!--Footer-->
+  <footer>
+    <footer class="bg-dark text-white pt-5 pb-4">
+      <div class="container text-center">
+        <div class="row text-center">
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
+            <p class="text-transform-uppercase">
+              <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
+            </p>
+            <p>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design"class="text-decoration-none text-white">Interactions</a>
+            </p>
+            <p>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"class="text-decoration-none text-white">Hosting</a>
+            </p>
+            <p>
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"class="text-decoration-none text-white">Edition</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
+            <p>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+            </p>
+            <p>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+            </p>
+            <p>
+              <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+            </p>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <h5 class="text-uppercase">Social</h5>
+            <p>
+              <a href="https://www.facebook.com/" class="text-decoration-none text-white">
+              <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/" class="text-decoration-none text-white">
+              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+            </p>
+            <p>
+              <a href="https://www.gmail.com/" class="text-white text-decoration-none">
+              <i class="fa fa-envelope text-primary"></i> Mail</a>
+            </p>
+          </div>
+        </div>
 
-                <hr class="mb-6">
-                <div class="row align-items-center">
-                  <div class="col-xs-12">
-                      <p>&copy; Copyright 2024 All reserved by
-                          <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
-                       </p>
-                   </div>
-               </div>
-            </div>
-        </footer>
+        <hr class="mb-6">
+        <div class="row align-items-center">
+          <div class="col-xs-12">
+            <p>&copy; Copyright 2024 All reserved by
+              <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
+            </p>
+          </div>
+        </div>
+      </div>
     </footer>
+  </footer>
       
-
 </body>
 </html>
