--- a/html/history.html
+++ b/html/history.html
@@ -18,7 +18,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -58,25 +58,25 @@
   </header>
  
   <!--Section-->
-  <section class="rb-history">
+  <section class="rb-section-history">
     <div class="rb-card-container">
-      <div class="rb-text w-100">
-        <h1 class="text-center mt-2">English</h1>
+      <div class="rb-text">
+        <h1 class="rb-heading-text">English</h1>
       </div>
       <div class="rb-card">
         <img src="../fotot/history1.jpg" alt="foto1">
         <div class="rb-card-content">
           <h3>The houses in '2000'</h3>
           <p>McMansions filled the suburbs, with the average house measuring 2,300 square feet-double that of just two generations earlier. Houses were built with open floor plan, high ceilings, bonus rooms, and even home theaters. This makes these houses stand out in the architectural.</p>
-          <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Click</a></button>
+          <button type="button" class="btn btn-dark rb-btn"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Click</a></button>
         </div>
       </div>
       <div class="rb-card">
         <img src="../fotot/history2.jpg" alt="foto2">
         <div class="rb-card-content">
           <h3>The houses in '2010'</h3>
-          <p>In the America, smart tech began to automate homes, making it possible to turn on lights, adjust the thermostat, and open the blinds through an app. So home appliances have become more and more connected, making life easier and more modern, paving the way for an even smarter future.</p>                            
-          <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Click</a></button>
+          <p>In the America, smart tech began to automate homes, making it possible to turn on lights, adjust the thermostat, and open the blinds through an app. So home appliances have become more and more connected, making life easier and more modern, paving the way for a future.</p>                            
+          <button type="button" class="btn btn-dark rb-btn"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Click</a></button>
         </div>
       </div>
       <div class="rb-card">
@@ -84,26 +84,26 @@
         <div class="rb-card-content">
           <h3>The houses in '2023'</h3>
           <p>The home design landscape has undergone significant changes in 2023, reflecting a more modern and innovative approach. New technologies have been sealessly integrated, making your home smarter and beter suited to everyday needs. The design of the house marks changes in 2023, while innovations are announced for 2024.</p>
-          <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/living-room-trends-7552960">Click</a></button>
+          <button type="button" class="btn btn-dark rb-btn"><a href="https://www.bhg.com/living-room-trends-7552960">Click</a></button>
         </div>
       </div>
-      <div class="rb-text w-100">
-        <h1 class="text-center mt-2">Albanian</h1>
+      <div class="rb-text">
+        <h1 class="rb-heading-text">Albanian</h1>
       </div>
       <div class="rb-card">
         <img src="../fotot/history1.jpg" alt="foto1">
         <div class="rb-card-content">
           <h3>Shtëpitë në vitin '2000'</h3>
           <p>McMansions mbushën periferitë, me një shtëpi mesatare prej 2,300 metrash katrorë-dyfishi i asaj të vetëm dy brezave më parë. Shtëpitë u ndërtuan me planimetri te hapura, tavane të larta, dhoma bonus, madje edhe kinema shtëpiake. Kjo bën që këto shtëpi të shkelqejnë në skenën arkitektonike.</p>
-            <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Klikoni</a></button>
+            <button type="button" class="btn btn-dark rb-btn"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Klikoni</a></button>
         </div>
       </div>
       <div class="rb-card">
         <img src="../fotot/history2.jpg" alt="foto2">
         <div class="rb-card-content">
           <h3>Shtëpitë në vitin '2010'</h3>
-          <p>Në Amerikë, teknologjia intelegjente filloi të automatizonte shtëpitë, duke bërë të mundur ndezjen e dritave, rregullimin e termostatit dhe hapjen e blindave përmes një aplikacioni. Pra, pajisjet e shtëpisë janë bërë gjithnjë e më të lidhura, duke e bërë jetën më të lehtë dhe më moderne, duke hapur rrugen edhe për një të ardhme më të zgjuar.</p>
-          <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Klikoni</a></button>
+          <p>Në Amerikë, teknologjia intelegjente filloi të automatizonte shtëpitë, duke bërë të mundur ndezjen e dritave, rregullimin e termostatit dhe hapjen e blindave përmes një aplikacioni. Pra, pajisjet e shtëpisë janë bërë gjithnjë e më të lidhura, duke e bërë jetën më të lehtë dhe më moderne, duke hapur rrugen edhe për një të ardhme.</p>
+          <button type="button" class="btn btn-dark rb-btn"><a href="https://www.bhg.com/decorating/lessons/expert-advice/100-years-interior-design/">Klikoni</a></button>
         </div>
       </div>
       <div class="rb-card">
@@ -111,7 +111,7 @@
         <div class="rb-card-content">
           <h3>Shtëpitë në vitin '2023'</h3>
           <p>Peisazhi i dizajnit të shtëpisë ka pësuar ndryshime të rëndësishme në vitin 2023, duke refletuar një qasje më moderne dhe inovative. Teknologjitë e reja janë integruar pa probleme, duke e bërë shtëpinë tuaj më të zgjuar dhe më të përshtatshme për nevojat e perditshme. Dizajni i shtëpisë shenon ndryshime në 2023, ndersa për 2024 paralajmrohen risi.</p>
-          <button type="button" class="btn btn-dark"><a href="https://www.bhg.com/living-room-trends-7552960">Klikoni</a></button>
+          <button type="button" class="btn btn-dark rb-btn"><a href="https://www.bhg.com/living-room-trends-7552960">Klikoni</a></button>
         </div>
       </div>
     </div>
@@ -120,8 +120,8 @@
   <!--Footer-->
   <footer>
     <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container text-center text-md-center">
-        <div class="row text-center text-md-left">
+      <div class="container text-center">
+        <div class="row text-center">
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
             <p class="text-transform-uppercase">
