--- a/html/login.html
+++ b/html/login.html
@@ -19,7 +19,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -58,6 +58,7 @@
       </div>
     </nav>
   </header>
+
   <!--Section-->
   <section class="rb-login forms">
     <div class="container">
@@ -91,24 +92,21 @@
   <!--Footer-->
   <footer>
     <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container text-center text-md-center">
-        <div class="row text-center text-md-left">
+      <div class="container text-center">
+        <div class="row text-center">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
             <p>
-              <a href="https://www.interaction-design.org/literature/topics/interaction-design"
-                class="text-decoration-none text-white">Interactions</a>
+              <a href="https://www.interaction-design.org/literature/topics/interaction-design" class="text-decoration-none text-white">Interactions</a>
             </p>
             <p>
-              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/"
-                class="text-decoration-none text-white">Hosting</a>
+              <a href="https://www.sofa.com/inspiration-corner/lifestyle/how-to-make-your-home-perfect-for-hosting-home-decoration-tips/" class="text-decoration-none text-white">Hosting</a>
             </p>
             <p>
-              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/"
-                class="text-decoration-none text-white">Edition</a>
+              <a href="https://www.housebeautiful.com/lifestyle/entertainment/a43220980/extreme-makeover-home-edition-behind-the-scenes-facts/" class="text-decoration-none text-white">Edition</a>
             </p>
           </div>
           <div class="col-md-4 col-xs-12">
@@ -118,8 +116,7 @@
                 class="text-decoration-none text-white">Products</a>
             </p> 
             <p>
-              <a href="https://www.dwell.com/discover/interior%20design"
-                class="text-decoration-none text-white">Article</a>
+              <a href="https://www.dwell.com/discover/interior%20design" class="text-decoration-none text-white">Article</a>
             </p>
             <p>
               <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
@@ -129,15 +126,15 @@
             <h5 class="text-uppercase">Social</h5>
             <p>
               <a href="https://www.facebook.com/" class="text-decoration-none text-white">
-                <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+              <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
             </p>
             <p>
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">
-                <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
             </p>
             <p>
               <a href="https://www.gmail.com/" class="text-white text-decoration-none">
-                <i class="fa fa-envelope text-primary"></i> Mail</a>
+              <i class="fa fa-envelope text-primary"></i> Mail</a>
             </p>
           </div>
         </div>
