--- a/html/terms.html
+++ b/html/terms.html
@@ -17,7 +17,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -88,7 +88,6 @@
               <p>A well-equipped bathroom functionality with comfort. Quality fixtures, smart storage, and something aesthetics create a space that is both efficient and inviting.</p>
             </div>
           </div>
-
           <hr>
           <div class="rb-section-text">
             <h1>Arrangements</h1>
@@ -110,6 +109,8 @@
                 <h3>Exterior Aesthetics</h3>
                 <p>Attention to the external appearance of th house includes designing facades, landscaping, exterior lighting.</p>
               </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -118,10 +119,10 @@
   <!--Footer-->
   <footer>
     <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container text-center text-md-center">
-        <div class="row text-center text-md-left">
+      <div class="container text-center">
+        <div class="row text-center">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
@@ -137,15 +138,15 @@
           </div>
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-white">The sites</h5>
-              <p>
-                <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
-              </p>
-              <p>
-                <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
-              </p>
-              <p>
-                <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
-              </p>
+            <p>
+              <a href="https://www.amazon.com/home-d%C3%A9cor/b?ie=UTF8&node=1063278"class="text-decoration-none text-white">Products</a>
+            </p>
+            <p>
+              <a href="https://www.dwell.com/discover/interior%20design"class="text-decoration-none text-white">Article</a>
+            </p>
+            <p>
+              <a href="https://www.designtosell.com/" class="text-decoration-none text-white">Sells</a>
+            </p>
           </div>
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase">Social</h5>
