--- a/html/contact.html
+++ b/html/contact.html
@@ -88,7 +88,7 @@
          <div class="container text-center">
             <div class="row text-center">
                <div class="col-md-4 col-xs-12">
-                  <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+                  <h5 class="text-uppercase mb-4 font-weight-bold white">Product</h5>
                   <p class="text-transform-uppercase">
                      <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
                   </p>
