--- a/html/services.html
+++ b/html/services.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="../fotot/services-icon.jpg">
   <link rel="stylesheet" href="../css/services.css">
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
-  <script src="../bootstrap/js/bootstrap.js"defer></script>
+  <script src="../bootstrap/js/bootstrap.bundle.min.js"defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
@@ -18,7 +18,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../html/index.html"><img src="../fotot/navbar-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -73,35 +73,35 @@
       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="4" arial-label="Slide 5"></button>
     </div>
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item active rb-carousel-item">
         <img src="../fotot/service1.jpg" class="d-block w-100" alt="foto1">
         <div class="carousel-caption d-md-block">
           <h5 class="text-dark font-weight-bold rb-section">Living room</h5>
           <p class="text-dark rb-section">The living room, a sanctuary within the home, is where comfort meets style. This versatile space serves as a hub for relaxation and socializing, it's design carefully curated for both aesthetics and functionality.</p>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item rb-carousel-item">
         <img src="../fotot/service2.jpg " class="d-block w-100 alt" alt="foto2">
         <div class="carousel-caption d-md-block">
           <h5 class="text-dark font-weight-bold rb-section">Kitchen</h5>
           <p class="text-dark rb-section">The kitchen, the heart of the home, is where delicious aromas intertwine with shared laughter. It's design balances functionality and style, offering a space where culinary creations come to life.</p>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item rb-carousel-item">
         <img src="../fotot/service3.jpg" class="d-block w-100" alt="foto3">
         <div class="carousel-caption d-md-block">
           <h5 class="text-dark font-weight-bold rb-section">Bathroom</h5>
           <p class="text-dark rb-section">Thoughtful design elements, such as soft lighting and calming color schemes, contribute to a spa-like ambiance. It's a space where simplicity meets luxury, creating a refreshing sanctuary where one can unwind and recharge. </p>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item rb-carousel-item">
         <img src="../fotot/service4.jpg" class="d-block w-100" alt="foto4">
         <div class="carousel-caption d-m-block">
           <h5 class="text-dark font-weight-bold rb-section">Bedroom</h5>
           <p class="text-dark rb-section">The bedroom is a sanctuary for rest and rejuvenation, a personal haven where comfort and tranquility converge. It's design focuses on creating a serene atmosphere conducive to relaxation and sleep. </p>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item rb-carousel-item">
         <img src="../fotot/service5.jpg" class="d-block w-100" alt="foto5">
         <div class="carousel-caption d-m-block">
           <h5 class="text-dark font-weight-bold rb-section">Bedroom for children</h5>
@@ -122,10 +122,10 @@
   <!-- Footer -->
   <footer>
     <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container text-center text-md-center">
-        <div class="row text-center text-md-left">
+      <div class="container text-center">
+        <div class="row text-center">
           <div class="col-md-4 col-xs-12">
-            <h5 class="text-uppercase mb-4 font-weight-bold text-light">Product</h5>
+            <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
               <a href="https://www.thehousedesigners.com/" class="text-decoration-none text-white">Designer</a>
             </p>
@@ -155,15 +155,15 @@
             <h5 class="text-uppercase">Social</h5>
             <p>
               <a href="https://www.facebook.com/" class="text-decoration-none text-white">
-                <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
+              <i class="fab fa-facebook mt-2 text-capitalize"></i> Facebook</a>
             </p>
             <p>
               <a href="https://www.instagram.com/" class="text-decoration-none text-white">
-                <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
+              <i class="fab fa-instagram mt-2 text-capitalize text-danger"></i> Instagram</a>
             </p>
             <p>
               <a href="https://www.gmail.com/" class="text-white text-decoration-none">
-                <i class="fa fa-envelope text-primary"></i> Mail</a>
+              <i class="fa fa-envelope text-primary"></i> Mail</a>
             </p>
           </div>
       </div>
@@ -175,7 +175,7 @@
           <a href="#"class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a></p>
         </div>
       </div>
-    </div>
+    </footer>
   </footer>
 
 </body>
