--- a/html/video.html
+++ b/html/video.html
@@ -19,7 +19,7 @@
   <header class="sticky-top">
     <nav class="navbar navbar-dark bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img src="../fotot/home-icon.jpg"></a>
+        <a class="navbar-brand" href="../index.html"><img src="../fotot/navbar-icon.jpg"></a>
         <button class="navbar-toggler text-bg-dark" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -67,7 +67,7 @@
   <section>
     <div class="rb-btn">
       <div class="rb-play"></div>
-        <p>Play video </p>
+        <p> Click </p>
       </div>
       <div class="rb-video">
         <video src="../fotot/video.mp4"></video>
@@ -78,8 +78,8 @@
   <!--Footer-->
   <footer>
     <footer class="bg-dark text-white pt-5 pb-4">
-      <div class="container text-center text-md-center">
-        <div class="row text-center text-md-left">
+      <div class="container text-center">
+        <div class="row text-center">
           <div class="col-md-4 col-xs-12">
             <h5 class="text-uppercase mb-4 font-weight-bold text-white">Product</h5>
             <p class="text-transform-uppercase">
@@ -127,7 +127,7 @@
           <div class="row align-items-center">
             <div class="col-xs-12">
               <p>&copy; Copyright 2024 All reserved by
-                <a href="#" class="text-decoration-none text-success"><strong> Rinesa Bislimi</strong></a>
+                <a href="#" class="text-decoration-none text-success"><strong>Rinesa Bislimi</strong></a>
               </p>
             </div>
           </div>
