add js history page , and other page any change

--- a/html/contact.html
+++ b/html/contact.html
@@ -70,11 +70,13 @@
                <div class="rb-left"></div>
                   <div class="rb-right">
                     <h2>Contact us</h2>
-                    <input type="text" class="rb-field" placeholder="Your name">
-                    <input type="email" class="rb-field"  placeholder="Your email">
-                    <input type="number" class="rb-field" placeholder="Your phone">
-                    <textarea class="rb-field" placeholder="Message"></textarea>
-                    <button class="rb-btn">Send</button>
+                    <form action="#" class="rb-field">
+                      <input type="text" class="rb-field" placeholder="Your name">
+                      <input type="email" class="rb-field"  placeholder="Your email">
+                      <input type="number" class="rb-field" placeholder="Your phone">
+                      <textarea class="rb-field" placeholder="Message"></textarea>
+                      <button class="rb-btn">Send</button>
+                     </form>
                   </div>
                </div>
             </div>
