--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark dropdown-toggle" href="./html/about.html" aria-current="page" aria-expanded="true"><i class="fa-solid fa-user"></i> About</a>
+                <a class="nav-link text-dark dropdown-toggle" href="./html/about.html" aria-current="page" aria-expanded="false"><i class="fa-solid fa-user"></i> About</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="./html/history.html"><i class="fa-solid fa-clock-rotate-left"></i> History</a></li>
                   <li><a class="dropdown-item" href="./html/designers.html"><i class="fa-solid fa-table"></i> Designers</a></li>
