--- a/html/about.html
+++ b/html/about.html
@@ -30,8 +30,8 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-              <li class="rb-nav-item">
-                <a class="nav-link text-dark dropdown-toggle" href="../index.html" data-bs-toggle="dropdown"><i class="fa-solid fa-house"></i> Home </a>
+              <li class="nav-item">
+                <a class="nav-link text-dark dropdown-toggle" href="/index.html"  data-bs-toggle="dropdown" aria-expanded="true" aria-haspopup="true" tabindex="0"><i class="fa-solid fa-house"></i> Home </a>
                 <ul class="dropdown-menu">
                   <li> <a class="dropdown-item" href="../html/video.html"><i class="fa-solid fa-file-video"></i> Video </a></li>
                 </ul>
