--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="rb-nav-item">
-                <a class="nav-link active text-dark dropdown-toggle" href="./index.html" data-bs-toggle="dropdown" aria-expanded="false" ><i class="fa-solid fa-house"></i> Home</a>
+                <a class="nav-link active text-dark dropdown-toggle" href="./in" data-bs-toggle="dropdown" aria-expanded="false" ><i class="fa-solid fa-house"></i> Home</a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="./html/video.html"><i class="fa-solid fa-file-video"></i> Video</a></li>
                 </ul>
