Create checkbox with html, css and js

--- a/html/history.html
+++ b/html/history.html
@@ -57,11 +57,16 @@
       </div>
     </nav>
   </header>
- 
+
   <!--Section-->
   <section class="rb-section-history">
     <div class="rb-card-container">
       <div class="rb-text">
+        <label class="rb-switch">
+          <input type="checkbox" id="rb-checkbox">
+          <span class="rb-slider"></span>
+        </label>
+        <hr>
         <h1 class="rb-heading-text">English</h1>
       </div>
       <div class="rb-card">
