--- a/html/terms.html
+++ b/html/terms.html
@@ -45,13 +45,13 @@
                 <a class="nav-link text-dark" href="../html/inspiration.html"><i class="fa-solid fa-lightbulb"></i> Inspiration</a></li>
               </li> 
               <li class="rb-nav-item">
-                <a class="nav-link text-dark dropdown-toggle" href="#" data-bs-toggle="dropdown">  Treeview menu  </a>
+                <a class="nav-link text-dark dropdown-toggle" href="../index.html" data-bs-toggle="dropdown" aria-expanded="false">  Treeview menu  </a></li>
                 <ul class="dropdown-menu">
-                  <li> <a class="dropdown-item" href="#"> Dropdown item 1 </a></li>
+                  <li> <a class="dropdown-item" href="../fotot/about-icon.jpg"> Dropdown item 1 </a></li>
                   <li> <a class="dropdown-item" href="#"> Dropdown item 2 &raquo; </a></li>
                   <li> <a class="nav-link text-dark" href="../html/contact.html"><i class="fa-solid fa-address-book"></i> Contact</a></li>                </li>
                 </ul>
-              </li> 
+
               <li class="rb-nav-item"> 
                 <a class="nav-link text-dark" href="../html/login.html"><i class="fa-regular fa-user"></i> Login</a></li>
               </li>
