--- a/html/contact.html
+++ b/html/contact.html
@@ -70,7 +70,7 @@
                <div class="rb-left"></div>
                   <div class="rb-right">
                     <h2>Contact us</h2>
-                    <form action="#" class="rb-field">
+                    <form action="#">
                       <input type="text" class="rb-field" placeholder="Your name">
                       <input type="email" class="rb-field"  placeholder="Your email">
                       <input type="number" class="rb-field" placeholder="Your phone">
