--- a/html/about.html
+++ b/html/about.html
@@ -9,7 +9,6 @@
   <script src="../bootstrap/js/bootstrap.bundle.min.js" defer></script>
   <link rel="stylesheet" href="../bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body id="rb-home-design">
@@ -78,7 +77,8 @@
               <p>Welcome to a world, where ideas merge seamlessly with function, creating the perfect harmony in your
                 home design. Our approach to creating living spaces goes beyond aesthetic to creating an experience that
                 reflects your unique style and personality. From the moment you enter your home, every element is
-                carefully selected to reflect your taste and preferences.</p>
+                carefully selected to reflect your taste and preferences.
+              </p>
               <a href="https://www.quora.com/How-do-I-get-front-end-developer-experience-as-a-student"><button type="button" class="rb-button">Click me</button></a>
             </div>
           </div>
