--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
   <script src="./bootstrap/js/bootstrap.bundle.min.js"defer></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body id="rb-home-design">
@@ -70,7 +69,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 col-xs-12">
-            <h1>Home Design-<strong><em> RB' </em></strong></h1>
+            <div class="rb-group">
+              <h1><strong>Home Design-RB'</strong></h1>
+              <button type="button" class="btn btn-dark rb-btn"><a href="../Home-Design-RB/index.html">Click <i class="fa-solid fa-check"></i></a></button>
+            </div>
           </div>
           <div class="col-md-6 col-xs-12">
             <img src="./fotot/index-image.jpg">
